Update 'go-opiqlguv' component image to: quay.io/rhtap_qe/go-opiqlguv:f15f84a2d796c63ceda2caf47dc2a2ef802ab6d4@sha256:62e71994f7a15b4ab3d2fe4abf2e77b59b5e5e3b8b8b68d80a7951ff84f010e4

--- a/components/go-opiqlguv/overlays/development/deployment-patch.yaml
+++ b/components/go-opiqlguv/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-opiqlguv
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-opiqlguv:f15f84a2d796c63ceda2caf47dc2a2ef802ab6d4@sha256:62e71994f7a15b4ab3d2fe4abf2e77b59b5e5e3b8b8b68d80a7951ff84f010e4
+          name: container-image
